--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -67,7 +67,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 8px 0px 8px 16px;
+    padding-left: 16px;
     list-style: none;
     height: 60px;
   }
@@ -77,17 +77,16 @@
     color: #f5f5f5;
     font-size: 18px;
     width: 95%;
-    height: 100%;
+    height: 80%;
     display: flex;
     align-items: center;
     padding: 0 16px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
   }
   
   .sidebar__text a:hover {
     color: #1a83ff;
-    border-right-width: 5px;
-    border-color: #1a83ff;
+    border-right: 5px solid #1a83ff;
   }
   
   
