--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -8,6 +8,12 @@
     margin-left: 30px;
     padding-top: 140px;
     height: 190px;
+    /* background-image: linear-gradient(
+        270deg,
+        transparent,
+        rgba(37,37,37,0.0),
+        #111
+    ) */
 }
 
 .banner__title {
@@ -31,7 +37,7 @@
     outline: none;
     border: none;
     font-weight: 700;
-    border-radius: 0.2vw;
+    border-radius: 4px;
     padding-left: 2rem;
     padding-right: 2rem;
     margin-right: 1rem;
