--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -3,18 +3,17 @@
     position:fixed;
 
     height: 100%;
-    width:100%;
+    width: 100%;
     box-sizing: border-box;
 }
 
-.overview__contents {
+.overview__overlay {
+    position:fixed;
     display: flex;
-    flex-direction: row;
-    padding-left: 30px;
-    padding-right: 30px;
+    justify-content: center;
     padding-top: 140px;
+    width: 100%;
     height: 100%;
-    width:100%;
     background-color: rgb(24, 24, 24, 0.6);
     /* background-image: linear-gradient(
         180deg,
@@ -22,14 +21,26 @@
         rgba(37,37,37,0.61),
         #111
     ) */
+
+}
+
+.overview__contents {
+    display: flex;
+    /* height: 100%; */
+    flex-wrap: wrap;
+    max-width: 1300px;
+    /* padding-left: 60px;
+    padding-right: 60px; */
 }
 
 .overview__contentsLeft {
-    width: 50%;
+    flex:1;
+    /* max-width: 50%; */
 }
 
 .overview__contentsRight {
-    width: 50%;
+    flex:1;
+    max-width: 50%;
 }
 
 .overview__title {
@@ -52,11 +63,11 @@ span {
 
 .overview__description {
     width: 45rem;
-    line-height: 1.5;
+    line-height: 1.9;
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 0.8rem;
-    max-width: 360px;
+    max-width: 460px;
     /* height: 80px; */
 }
 
@@ -114,6 +125,12 @@ span {
     flex-direction: column;
     margin-right: 20px;
     transition: transform 450ms;
+    min-width: 140px;
+    width: 140px;
+    background-color: #fff;
+    border-radius: 5px;
+    color: #111;
+    padding-bottom: 10px;
 }
 
 .cast__star:hover {
@@ -122,8 +139,7 @@ span {
 
 .star__poster {
     object-fit: contain;
-    /* width: 100%; */
-    max-height: 180px;
+    width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -142,10 +158,14 @@ span {
 }
 
 .star__name {
-    font-size: 0.8rem;
+    /* padding-top: 10px; */
+    padding: 10px 10px 0 10px;
+    font-size: 0.9rem;
+    font-weight: 550;
 }
 
 .star__character {
-    font-size: 0.8rem;
+    padding: 0 10px;
+    font-size: 0.9rem;
 }
 
