--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -26,16 +26,12 @@
 
 .overview__contents {
     display: flex;
-    /* height: 100%; */
     flex-wrap: wrap;
     max-width: 1300px;
-    /* padding-left: 60px;
-    padding-right: 60px; */
 }
 
 .overview__contentsLeft {
     flex:1;
-    /* max-width: 50%; */
 }
 
 .overview__contentsRight {
@@ -53,8 +49,6 @@
     display: flex;
     font-size: 0.8rem;
     color: #c6c6c6;
-    /* justify-content: center; */
-    /* align-items: center; */
 }
 
 span {
@@ -68,7 +62,6 @@ span {
     padding-bottom: 1rem;
     font-size: 0.8rem;
     max-width: 460px;
-    /* height: 80px; */
 }
 
 .overview__button {
@@ -76,11 +69,9 @@ span {
     cursor: pointer;
     color: #fff;
     outline: none;
-    /* border: none; */
     font-weight: 700;
     border-radius: 4px;
     border: 1px solid #fff;
-    /* padding: 0.5rem, 2rem, 0.5rem, 2rem; */
     padding-top: 1rem;
     padding-bottom: 1rem;
     padding-left: 2rem;
@@ -100,9 +91,6 @@ span {
     background-color: #e6e6e6;
     transition: all 0.2s;
 }
-
-/* .cast {
-} */
 
 .cast__title {
     font-size: 20px;
@@ -139,7 +127,6 @@ span {
 }
 
 .star__poster {
-    /* object-fit: contain; */
     width: 100%;
     height: 175px;
     border-top-left-radius: 8px;
@@ -161,7 +148,6 @@ span {
 }
 
 .star__name {
-    /* padding-top: 10px; */
     padding: 10px 10px 0 10px;
     font-size: 0.9rem;
     font-weight: 550;
@@ -172,3 +158,23 @@ span {
     font-size: 0.9rem;
 }
 
+/* YouTube iframe */
+.video__container {
+    overflow: hidden;
+    position: relative;
+    width:100%;
+}
+
+.video__container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video__container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
