--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -61,6 +61,7 @@
   } */
   
   .modal__body {
+    /* max-height: 1200px; */
     padding: 20px 24px;
     border-radius: 4px;
     background-color: white;
