--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -240,3 +240,80 @@
     width: 100%;
     height: 100%;
 }
+
+/* Credits */
+
+.credits {
+    max-width: 1300px;
+    max-height: 1200px;
+    display: flex;
+    justify-content: space-around;
+    overflow-y: scroll;
+}
+
+.credits::-webkit-scrollbar {
+    display: none;
+}
+
+.credits__title {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.credits__title span {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 550;
+    color: rgba(0,0,0,0.5);
+}
+
+.credits__list {
+    padding: 1.4rem 0;
+}
+
+.credit {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 4px;
+    transition: transform 450ms;
+    min-width: 138px;
+    background-color: #fff;
+    border-radius: 8px;
+    color: #111;
+    padding-right: 10px;
+}
+
+.credit:hover {
+    transform: scale(1.08);
+}
+
+.credit__poster {
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    object-fit: cover;
+}
+
+.credit__data {
+    display:flex;
+    flex-direction: column;
+    background-color: #fff;
+    color: #111;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.credit__name {
+    padding: 10px 10px 0 10px;
+    font-size: 0.9rem;
+    font-weight: 550;
+}
+
+.credit__character {
+    padding: 0 10px;
+    font-size: 0.9rem;
+}
