--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -16,7 +16,7 @@
   .modal {
     z-index: 99;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     max-width: 1516px;
     margin: 0 auto;
   }
