--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -1,45 +1,76 @@
 .overview {
-    color: white;
-    position:fixed;
-
-    height: 100%;
-    width: 100%;
     box-sizing: border-box;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    height: 1000px;
 }
 
-.overview__overlay {
-    position:fixed;
+.overview::-webkit-scrollbar {
+    display: none;
+}
+
+.overview__header { 
+    height: 1000px;
+}
+
+.overview__headerOverlay {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding-top: 60px;
-    width: 100%;
-    height: 100%;
+    align-items: center;
     background-color: rgb(24, 24, 24, 0.6);
+
     /* background-image: linear-gradient(
         180deg,
         transparent,
         rgba(37,37,37,0.61),
         #111
     ) */
-
 }
 
-.overview__contents {
+.overview__headerContents {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 1300px;
-    overflow-y: scroll;
-}
-
-.overview__contents::-webkit-scrollbar {
-    display: none;
-}
-
-.overview__header {
-    display: flex;
-    justify-content: center;
     align-items: center;
+    max-width: 1300px;
+    color: white;
+    height: 890px;
+    /* flex-wrap: wrap; */
 }
+
+.overview__headerGradient {
+    /* display: flex; */
+    /* align-self: center; */
+    width: 100%;
+    height: 7.2rem;
+    background-image: linear-gradient(
+        180deg,
+        transparent,
+        rgba(17,17,17,0.6),
+        #111
+    )
+}
+
+.overview__footerButton {
+    padding: 1rem;
+    text-align: center;
+    color: red;
+    font-size: 4rem;
+}
+
+.overview__footer {
+    background-color: #111;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.overview__footerContent {
+    max-width: 1544px;
+
+}
+
+
 
 
 .overview__poster {
@@ -146,94 +177,6 @@
     transition: all 0.2s;
 }
 
-.cast {
-    max-width: 1300px;
-}
-
-.cast__titleContainer{
-    display: flex;
-    justify-content: space-between;
-}
-
-.cast__title {
-    font-size: 20px;
-    font-weight: 550;
-}
-
-.cast__button {
-    display: flex;
-    cursor: pointer;
-    color: #fff;
-    outline: none;
-    font-weight: 700;
-    border: 0;
-    font-size: 1rem;
-    background-color: transparent;
-    align-items: center;
-    justify-content: center;
-}
-
-.cast__stars {
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    padding: 20px;
-}
-
-.cast__stars::-webkit-scrollbar {
-    display: none;
-}
-
-.cast__star {
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    margin-right: 4px;
-    transition: transform 450ms;
-    min-width: 138px;
-    width: 138px;
-    background-color: #fff;
-    border-radius: 8px;
-    color: #111;
-    padding-bottom: 10px;
-}
-
-.cast__star:hover {
-    transform: scale(1.08);
-}
-
-.star__poster {
-    width: 100%;
-    height: 175px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    object-fit: cover;
-}
-
-.star__data {
-    display:flex;
-    flex-direction: column;
-    background-color: #fff;
-    color: #111;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2px;
-    padding-bottom: 2px;
-}
-
-.star__name {
-    padding: 10px 10px 0 10px;
-    font-size: 0.9rem;
-    font-weight: 550;
-}
-
-.star__character {
-    padding: 0 10px;
-    font-size: 0.9rem;
-}
-
 /* YouTube iframe */
 .video__container {
     display: flex;
@@ -254,83 +197,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-/* Credits */
-
-.credits {
-    max-width: 1300px;
-    max-height: 800px;
-    display: flex;
-    justify-content: space-around;
-    overflow-y: scroll;
-}
-
-.credits::-webkit-scrollbar {
-    display: none;
-}
-
-.credits__title {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.credits__title span {
-    margin: 0;
-    font-size: 20px;
-    font-weight: 550;
-    color: rgba(0,0,0,0.5);
-}
-
-.credits__list {
-    padding: 1.4rem 0;
-}
-
-.credit {
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 4px;
-    transition: transform 450ms;
-    min-width: 138px;
-    background-color: #fff;
-    border-radius: 8px;
-    color: #111;
-    padding-right: 10px;
-}
-
-.credit:hover {
-    transform: scale(1.08);
-}
-
-.credit__poster {
-    width: 80px;
-    height: 80px;
-    border-radius: 8px;
-    object-fit: cover;
-}
-
-.credit__data {
-    display:flex;
-    flex-direction: column;
-    background-color: #fff;
-    color: #111;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2px;
-    padding-bottom: 2px;
-}
-
-.credit__name {
-    padding: 10px 10px 0 10px;
-    font-size: 0.9rem;
-    font-weight: 550;
-}
-
-.credit__character {
-    padding: 0 10px;
-    font-size: 0.9rem;
 }
 
 .providers {
