--- a/src/pages/Overview/components/Seasons/Seasons.css
+++ b/src/pages/Overview/components/Seasons/Seasons.css
@@ -1,14 +1,26 @@
 .seasons {
-    background-color: #111;
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
     overflow-x: scroll;
     padding: 20px;
+    color: #fff;
 }
 
 .seasons::-webkit-scrollbar {
     display: none;
+}
+
+.seasons__select {
+    position: relative;
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    align-self: flex-start;
+    font-size: 1.4rem;
+    padding: 1rem 0;
+    /* display: flex;
+    width: 200px; */
 }
 
 .multimedia__name {
@@ -16,7 +28,6 @@
     text-align: center;
     font-weight: 400;
     font-size: 2rem;
-    color: #fff;
 }
 
 /* .multimedia__name span{
@@ -39,8 +50,9 @@
 }
 
 .season__release {
+    padding-bottom: 0.4rem;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #fff;
 }
 
@@ -55,6 +67,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     /* flex-direction: column; */
 }
 .episode {
