--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -227,3 +227,61 @@
     object-fit: cover;
     margin: 0 0.3rem;
 }
+
+
+.recommendations {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+.recommendation__poster {
+    object-fit: contain;
+    width: 100%;
+    max-height: 250px;
+    margin-right: 10px;
+    transition: transform 450ms;
+
+}
+
+.recommendation__poster:hover {
+    transform: scale(1.08);
+}
+
+.footer__sectionTitle {
+    color: #fff;
+    padding: 1rem 0;
+    text-align: center;
+    font-weight: 400;
+    font-size: 2rem;
+}
+
+.videos {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+
+.video {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    width:100%;
+}
+
+.video::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
