--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -1,9 +1,9 @@
 .overview {
     box-sizing: border-box;
     overflow-y: scroll;
-    display: flex;
-    flex-direction: column;
-    height: 1000px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* height: 1000px; */
 }
 
 .overview::-webkit-scrollbar {
@@ -11,7 +11,7 @@
 }
 
 .overview__header { 
-    height: 1000px;
+    
 }
 
 .overview__headerOverlay {
@@ -34,7 +34,7 @@
     align-items: center;
     max-width: 1300px;
     color: white;
-    height: 890px;
+    min-height: 890px;
     /* flex-wrap: wrap; */
 }
 
@@ -60,13 +60,11 @@
 
 .overview__footer {
     background-color: #111;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
 }
 
 .overview__footerContent {
     max-width: 1544px;
+    margin: 0 auto;
 }
 
 .overview__poster {
@@ -280,4 +278,29 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 768px) {
+    .overview__poster {
+        margin-right: 0; 
+        margin-top: 9rem;
+    }
+
+    .overview__right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top:40px;
+    }
+    
+    .overview__description {
+        text-align: center;
+        margin: 0 1.5rem;
+    }
+
+    .overview__headerContents {
+        flex-wrap: wrap;
+        justify-content: center;;
+    }
 }
