--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -35,6 +35,7 @@
     max-width: 1300px;
     color: white;
     min-height: 890px;
+    padding: 20px
     /* flex-wrap: wrap; */
 }
 
@@ -65,6 +66,7 @@
 .overview__footerContent {
     max-width: 1544px;
     margin: 0 auto;
+    padding: 20px;
 }
 
 .overview__poster {
