--- a/src/pages/Overview/components/Seasons/Seasons.css
+++ b/src/pages/Overview/components/Seasons/Seasons.css
@@ -22,7 +22,7 @@
 
 .multimedia__name {
     padding: 0.5rem 0;
-    text-align: center;
+    /* text-align: center; */
     font-weight: 400;
     font-size: 2rem;
 }
@@ -98,4 +98,29 @@
     /* max-width: 80%; */
     font-size: 0.8rem;
     color: rgba(225,225,225,0.6);
+}
+
+.episode__expand {
+    /* position: absolute; */
+    bottom: 200px;
+    /* top: 50; */
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 7.2rem;
+    text-align: center;
+    justify-content: center;
+    background-image: linear-gradient(
+        180deg,
+        transparent,
+        rgba(17,17,17,0.7),
+        #111
+    )
+}
+
+.episode__expandButton {
+    padding: 1rem;
+    text-align: center;
+    /* color: red; */
+    font-size: 2rem;
 }
