--- a/src/pages/Overview/Overview.css
+++ b/src/pages/Overview/Overview.css
@@ -227,7 +227,7 @@
     object-fit: contain;
     width: 100%;
     max-height: 250px;
-    margin-right: 10px;
+    margin: 0 10px 0 4px;
     transition: transform 450ms;
 
 }
