--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 * {
-    /* box-sizing: border-box; */
+    /* box-sizing: border-box; */ 
     margin: 0;
     padding: 0;
+
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    /* font-size: 16px; */
+    /* color: #edf0f1; */
+    text-decoration: none;
+    /* background-color: #111; */
   }
