--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,99 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+
 .nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 20px;
-    height: 30px;
-    z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #24252A;
+  transition: top 0.2s linear;
+  height: 64px;
+  z-index: 10;
+}
 
-    /* Animations */
-    transition-timing-function: ease-in;
-    transition: all 0.5s;
-  }
-
-  .nav__black {
-    background-color: #111;
+.nav__up {
+  top: -64px;
 }
 
 .nav__logo {
-    position: fixed;
-    left: 20px;
-    width: 80px;
-    object-fit: contain;
+  margin-left: 10%;
+  cursor: pointer;
+  font-size: 26px;
+  color: rgba(0, 136, 169);
 }
 
-.nav__avatar {
-    position: fixed;
-    right: 20px;
-    width: 30px;
-    object-fit: contain;
+.nav__button {
+  margin-right: 10%;
 }
-  
-  .sidebar__open {
-    /* margin-left: 2rem; */
-    font-size: 2rem;
-    background: none;
-  }
-  
-  .sidebar__menu {
-    z-index: 1;
-    background-color: #111;
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
-  }
-  
-  .sidebar__menu.active {
-    left: 0;
-    transition: 350ms;
-  }
 
-  .sidebar__menuItems {
-    padding-top: 60px;
-    width: 100%;
-  }
-  
-  .sidebar__text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-left: 16px;
-    list-style: none;
-    height: 60px;
-  }
-  
-  .sidebar__text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 95%;
-    height: 80%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    /* border-radius: 4px; */
-  }
-  
-  .sidebar__text a:hover {
-    color: #1a83ff;
-    border-right: 5px solid #1a83ff;
-  }
-  
-  
-  /* .sidebar__toggle {
-    background-color: #060b26;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-  } */
-  
-  span {
-    margin-left: 16px;
-  }
+.nav__links {
+  list-style: none;
+}
+
+.nav__links li {
+  display: inline-block;
+  padding: 0 20px;
+}
+
+.nav__links li a {
+  color: #edf0f1;
+  transition: all 0.3s ease 0s;
+}
+
+.nav__links li a:hover {
+  color: #0088a9;
+}
+
+.nav__search {
+  color: #edf0f1;
+  padding: 9px 25px;
+  background-color: rgba(0, 136, 169);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+.nav__search:hover {
+  background-color: rgba(0, 136, 169, 0.8);
+}
