--- a/src/components/Column/Column.css
+++ b/src/components/Column/Column.css
@@ -2,6 +2,14 @@
     position: relative;
 }
 
+.column__title {
+    color: #fff;
+    padding: 2rem 0 0.5rem 0;
+    /* text-align: center; */
+    font-weight: 400;
+    font-size: 2rem;
+}
+
 .column__left {
     content: '';
     width: 60px;
