fixxed height of row elements

--- a/src/components/Column/Column.css
+++ b/src/components/Column/Column.css
@@ -4,10 +4,10 @@
 
 .column__title {
     color: #fff;
-    padding: 2rem 0 0.5rem 0;
+    padding: 2rem 0 0.5rem 1rem;
     /* text-align: center; */
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .column__left {
