--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -17,9 +17,11 @@
 .row__poster {
     object-fit: contain;
     width: 100%;
-    max-height: 100px;
+    /* max-height: 100px; */
+    max-height: 250px;
     margin-right: 10px;
     transition: transform 450ms;
+    cursor: pointer;
 }
 
 /* TODO: Make it so when hover, it shows the backdrop image instead of always showing it */
