--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -5,12 +5,13 @@
     height: 750px;
     position: relative;
     display: flex;
+    margin-left: 130px;
 }
 
 .banner__contents {
     display: flex;
     flex-direction: column;
-    margin-left: 30px;
+    margin-left: -30px;
     margin-bottom: 100px;
     justify-content: flex-end;
     width: 35%;
@@ -24,7 +25,7 @@
 }
 
 .banner__description {
-    line-height: 1.3;
+    line-height: 27px;
     font-size: 1.1rem;
     color: rgba(255, 255, 255, 0.9);
 
