--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -29,11 +29,9 @@
     color: rgba(255, 255, 255, 0.9);
 
     padding: 1.5rem 0;
-    /* max-width: 360px; */
 }
 
 .banner__button {
-    /* display: flex; */
     cursor: pointer;
     color: #fff;
     outline: none;
@@ -56,7 +54,7 @@
     transition: all 0.2s;
 }
 
-.banner--fadeLeft {
+.banner__fadeLeft {
     position: absolute;
     bottom: 0;
     left: 0;
