--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -21,31 +21,80 @@
   cursor: pointer;
   font-size: 26px;
   color: rgba(0, 136, 169);
+  letter-spacing: 3px;
+  /* text-transform: uppercase; */
 }
 
-.nav__button {
-  margin-right: 10%;
+.navMenu__menuList {
+    flex-grow: 1;
+    justify-content: center;
+    margin: 12px 0;
+    /* padding: 0; */
+    display: flex;
+    color: #edf0f1;
+    white-space: nowrap;
 }
 
-.nav__links {
+.navMenu__menuItem {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+  /* list-style: none; */
+  margin-right: 16px;
+  text-transform: uppercase;
+  color: #edf0f1;
+  text-decoration: none;
+  cursor: pointer;
+  transition-timing-function: ease;
+  transition-duration: 300ms;
+  transition-property: margin, padding, font-size, background-color;
   list-style: none;
 }
 
-.nav__links li {
-  display: inline-block;
-  padding: 0 20px;
+.navMenu__menuItem a:hover {
+  background-color: rgb(82,89,102);
 }
 
-.nav__links li a {
+.navMenu__menuItem a {
+  padding: 12px 16px;
+  border-radius: 4px;
+}
+
+.navMenu__button {
+  display: none;
+}
+
+.navMenu__menuButton {
+  background-color: transparent;
+  border: none;
   color: #edf0f1;
-  transition: all 0.3s ease 0s;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 1.5px;
+  font-weight: bold;
 }
 
-.nav__links li a:hover {
-  color: #0088a9;
+/* .navMenu__menuList {
+  list-style: none;
+} */
+
+.navMenu__menuList li a {
+  color: inherit;
+  transition: all 0.3s ease 0s;
+  font-weight: bold;
 }
+
+/* .navMenu__menuList li a:hover {
+  color: #0088a9;
+} */
 
 .nav__search {
+  margin-right: 10%;
+}
+
+.search__icon {
   color: #edf0f1;
   padding: 9px 25px;
   background-color: rgba(0, 136, 169);
@@ -55,6 +104,100 @@
   transition: all 0.3s ease 0s;
 }
 
-.nav__search:hover {
+.search__icon:hover {
   background-color: rgba(0, 136, 169, 0.8);
+}
+
+
+@media (max-width: 768px) {
+  
+.navMenu__button {
+  color: #fff;
+  display: flex;
+  background-color: rgb(66,71,82);
+  border: none;
+  border-radius: 4px;
+  padding: 0;
+  transition: background-color 300ms ease;
+  min-width: 0;
+}
+
+.navMenu__selectedItem {
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 1.25px;
+  font-weight: 600;
+  list-style: none;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  transition-timing-function: ease;
+  transition-duration: 300ms;
+  transition-property: margin, padding, font-size, background-color;
+  padding: 14px 8px 14px 16px;
+  font-size: 12px;
+  line-height: 12px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: padding, font-size 300ms ease;
+}
+
+.navMenu__menuArrow {
+  align-self: center;
+  transition: transform 200ms linear;
+  margin-right: 14px;
+  min-width: 16px;
+}
+
+.navMenu__menuArrowOpen {
+  transform: rotate(180deg);
+}
+
+.navMenu__menuList {
+  background: rgb(49,53,61);
+  width: 270px;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 64px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.navMenu__menuItem, .navMenu__menuButton {
+  margin: 0;
+  display: block;
+  background: transparent;
+  border: none;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 12px;
+  list-style: none;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  color: #edf0f1;
+  text-align: center;
+  transition: background-color 300ms ease;
+  cursor: pointer;
+}
+
+.navMenu__menuButton {
+  width: 100%;
+  height: 100%;
+}
+
+.navMenu__menuButton a {
+  font-weight: inherit;
+  display: flex;
+  align-items: center;
+  color: inherit;
+  justify-content: center;
+  transition: all 0.3s ease 0s;
+  padding: 12px 16px;
+}
+
+.navMenu__button:hover, .NavMenu__menuItem:hover {
+  background-color: rgb(82,89,102);
+}
 }
