--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -10,8 +10,7 @@
 .banner__contents {
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
-    margin-bottom: 100px;
+    margin: 100px 50px;
     justify-content: flex-end;
     width: 35%;
     z-index: 1;
@@ -80,4 +79,29 @@
         rgba(37,37,37,0.61),
         #111
     )
+}
+
+
+@media (max-width: 768px) {
+    .banner {
+        margin-bottom: 50px;
+    }
+    .banner__contents {
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .banner__fadeLeft {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 50%;
+        background-image: linear-gradient(
+            to bottom,
+            transparent,
+            rgba(17,17,17,0.6),
+            #111
+        )
+    }
 }
